fix(app): improve spacing on home page

--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -16,6 +16,7 @@ h1.home-title {
 .home-container > p {
   width: 70%;
   font-size: 1.5rem;
+  line-height: 1.5em;
   color: var(--color-1);
   text-shadow: 1px 1px 2px black, 0.1em 0.1em 0.5em var(--color-4);
 }
